# platform.bootable.libbootloader

./: .clang-format  .gitignore  BUILD  README.md  rewrite_rust_project_path.py
gbl/: .bazelrc  BUILD  OWNERS  README.md  TEST_MAPPING  WORKSPACE.bazel  bazel.MODULE.bazel  bazel.WORKSPACE  bazel.bazelrc  bazel.py  bazel.sh  build.config.constants  readme.bzl  rewrite_rust_project_path.py  workspace.bzl
gbl/android_external_rust_crates/: BUILD  BUILD.arrayvec.bazel  BUILD.bitflags.bazel  BUILD.byteorder.bazel  BUILD.cfg-if.bazel  BUILD.crc32fast.bazel  BUILD.hex.bazel  BUILD.proc-macro2.bazel  BUILD.quote.bazel  BUILD.syn.bazel  BUILD.unicode-ident.bazel  BUILD.uuid.bazel  BUILD.zerocopy-derive.bazel  BUILD.zerocopy.bazel  repositories.bzl
gbl/bazel_patches/: 0001-rules_rust-add-uefi-support.patch  BUILD
gbl/docs/: EFI_ANDROID_BOOT_PROTOCOL.md  GBL_EFI_FASTBOOT_USB_PROTOCOL.md  GBL_EFI_IMAGE_LOADING_PROTOCOL.md  efi_protocols.md  gbl_ab_boot_flow.md  gbl_buffer_usage.md  gbl_efi_ab_slot_protocol.md  gbl_efi_avb_protocol.md  gbl_efi_fastboot_protocol.md  gbl_fastboot.md  gbl_os_configuration_protocol.md  partitions.md
gbl/efi/: BUILD
gbl/efi/app/: main.rs
gbl/efi/arch/aarch64/: BUILD
gbl/efi/arch/riscv64/: BUILD  deps.cpp  riscv64_efi.lds  riscv64_efi_header.S
gbl/efi/arch/x86/: BUILD  deps.S
gbl/efi/arch/x86_64/: BUILD  deps.S
gbl/efi/src/: android_boot.rs  android_load.rs  avb.rs  efi_blocks.rs  error.rs  fastboot.rs  fuchsia_boot.rs  lib.rs  main.rs  net.rs  ops.rs  riscv64.rs  utils.rs
gbl/integration/aosp_u-boot-mainline/: workspace.bzl
gbl/integration/aosp_uefi-gbl-mainline/: workspace.bzl
gbl/libabr/: BUILD
gbl/libabr/src/: c_staticlib.rs  lib.rs  utils.rs
gbl/libasync/: BUILD
gbl/libasync/src/: cyclic_executor.rs  lib.rs
gbl/libavb/: BUILD  BUILD.avb.bazel  deps.c  print.c
gbl/libavb/src/: lib.rs
gbl/libboot/: BUILD
gbl/libboot/aarch64_cache_helper/: BUILD  BUILD.arm_trusted_firmware.bazel  disable_cache_mmu.S
gbl/libboot/src/: aarch64.rs  lib.rs  riscv64.rs  x86.rs
gbl/libbootconfig/: BUILD
gbl/libbootconfig/src/: lib.rs
gbl/libbootimg/: BUILD
gbl/libbootimg/src/: lib.rs
gbl/libbootparams/: BUILD
gbl/libbootparams/src/: bootconfig.rs  commandline.rs  entry.rs  lib.rs
gbl/libc/: BUILD
gbl/libc/include/: limits.h  stdlib.h  string.h
gbl/libc/include/gbl/: print.h
gbl/libc/include/sys/: types.h
gbl/libc/src/: format.c  format_test.cpp  lib.rs  print.rs  strchr.rs  strcmp.rs  strtoul.rs
gbl/libdttable/: BUILD  BUILD.libdttable_c.bazel
gbl/libdttable/src/: lib.rs
gbl/libdttable/test/: BUILD  a.dts  b.dts  corrupted_dttable.img  dttable.img  gen_test_dttable.sh
gbl/libefi/: BUILD
gbl/libefi/defs/: boot_service.h  efi.h  system_table.h  types.h
gbl/libefi/defs/protocols/: ab_slot_protocol.h  android_boot_protocol.h  block_io2_protocol.h  block_io_protocol.h  device_path_protocol.h  gbl_efi_fastboot_usb.h  gbl_efi_os_configuration_protocol.h  loaded_image_protocol.h
gbl/libefi/mocks/: lib.rs  protocol.rs  utils.rs
gbl/libefi/src/: ab_slots.rs  allocation.rs  lib.rs  libc.rs  local_session.rs  protocol.rs  utils.rs
gbl/libefi/src/protocol/: ab_slot.rs  android_boot.rs  block_io.rs  block_io2.rs  device_path.rs  dt_fixup.rs  gbl_efi_ab_slot.rs  gbl_efi_avb.rs  gbl_efi_fastboot.rs  gbl_efi_fastboot_usb.rs  gbl_efi_image_loading.rs  gbl_efi_os_configuration.rs  image_loading.rs  loaded_image.rs  riscv.rs  simple_network.rs  simple_text_input.rs  simple_text_output.rs
gbl/libefi_types/: BUILD
gbl/libefi_types/defs/: efi.h  gbl_efi_common.h  runtime_service.h  types.h
gbl/libefi_types/defs/protocols/: dt_fixup_protocol.h  gbl_efi_ab_slot_protocol.h  gbl_efi_avb_protocol.h  gbl_efi_fastboot_protocol.h  gbl_efi_image_loading_protocol.h  gbl_efi_os_configuration_protocol.h  image_loading_protocol.h  simple_network_protocol.h
gbl/libefi_types/src/: lib.rs
gbl/libelf/: BUILD  elf_static_relocation_checker.cpp
gbl/liberror/: BUILD
gbl/liberror/src/: lib.rs
gbl/libfastboot/: BUILD
gbl/libfastboot/src/: lib.rs  local_session.rs
gbl/libfdt/: BUILD  BUILD.libfdt_c.bazel  BUILD.libufdt_c.bazel
gbl/libfdt/src/: lib.rs
gbl/libfdt/test/: BUILD  base.dts  gen_test_dtb.sh  overlay_2_by_path.dts  overlay_2_by_reference.dts  overlay_by_path.dts  overlay_by_reference.dts  overlay_wrong_path.dts  test.dtb  test.dts
gbl/libfdt/test/data/: BUILD  base.dtb  overlay_2_by_path.dtbo  overlay_2_by_reference.dtbo  overlay_by_path.dtbo  overlay_by_reference.dtbo  overlay_wrong_path.dtbo
gbl/libgbl/: Android.bp  BUILD  Cargo.toml
gbl/libgbl/src/: avb_ops.rs  boot_mode.rs  constants.rs  decompress.rs  device_tree.rs  digest.rs  error.rs  fuchsia.rs  image_buffer.rs  lib.rs  ops.rs  overlap.rs  partition.rs  slots.rs  sw_digest.rs
gbl/libgbl/src/android_boot/: load.rs  mod.rs  vboot.rs
gbl/libgbl/src/fastboot/: buffer_pool.rs  mod.rs  pin_fut_container.rs  (+4 more)
gbl/libgbl/testdata/: BUILD  README.md  cert_permanent_attributes.bad.hash  cert_permanent_attributes.hash  gen_sparse_test_bin.py  gen_test_data.py  gen_writeback_test_bin.sh  test_image.img  testkey_rsa4096.pem  testkey_rsa4096.pub.pem  zircon_a.vbmeta  zircon_a.vbmeta.cert  zircon_a.zbi  zircon_b.zbi  zircon_r.zbi  zircon_slotless.zbi
gbl/libgbl/tests/: integration_tests.rs  nostd.rs
gbl/libmisc/: BUILD
gbl/libmisc/src/: lib.rs
gbl/libsafemath/: BUILD  Cargo.toml
gbl/libsafemath/src/: lib.rs
gbl/libstorage/: BUILD
gbl/libstorage/src/: algorithm.rs  gpt.rs  lib.rs  multi_blocks.rs  non_blocking.rs  ram_block.rs  testlib.rs
gbl/libstorage/test/: BUILD  gen_gpt_test_bin.sh
gbl/libutils/: BUILD
gbl/libutils/src/: lib.rs
gbl/patches/: rust-libcompiler-builtins-enable-chkstk-on-uefi.patch
gbl/rust_crates/: gbl_rust_crates.bzl
gbl/rust_sysroot/: BUILD
gbl/smoltcp/: BUILD  BUILD.smoltcp.bazel  fixup.rs  heapless.rs
gbl/tests/: BUILD  noop.sh
gbl/toolchain/: BUILD  BUILD.android_rust_prebuilts.bazel  build_and_run_tests.bzl  gbl_clang_cc_toolchain.bzl  gbl_toolchain.bzl  gbl_workspace_util.bzl
gbl/tools/: gen_gpt_disk.py
(+141 files in other folders)
