# Copyright (C) 2023 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(
    default_visibility = ["//visibility:public"],
)

exports_files(glob(["**/*"]))

cc_library(
    name = "libfdt_c",
    srcs = [
        "acpi.c",
        "fdt.c",
        "fdt_addresses.c",
        "fdt_check.c",
        "fdt_empty_tree.c",
        "fdt_overlay.c",
        "fdt_ro.c",
        "fdt_rw.c",
        "fdt_strerror.c",
        "fdt_sw.c",
        "fdt_wip.c",
    ],
    hdrs = [
        "fdt.h",
        "libacpi.h",
        "libfdt.h",
        "libfdt_env.h",
        "libfdt_internal.h",
    ],
    copts = [
        "-Wno-int-conversion",
        "-Wno-implicit-function-declaration",
        "-Wno-pointer-integer-compare",
    ],
    includes = ["."],
    deps = ["@gbl//libc:headers"],
)
